// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders events even if birthday is unknown 1`] = `
<div
  className="timeline"
>
  <div
    className="timelineRow"
  >
    <div
      className="date"
    >
      <div>
        06.06.1900
      </div>
      <div
        className="age"
      />
    </div>
    <div
      className="line last"
    >
      <div />
    </div>
    <div
      className="timelineText"
    >
      <div>
        Missing translationId: events.Residence for language: \${ languageCode }
         
      </div>
      <div
        className="place"
      >
        Place
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders nothing if no events 1`] = `null`;

exports[`Renders person age on event 1`] = `
<div
  className="timeline"
>
  <div
    className="timelineRow"
  >
    <div
      className="date"
    >
      <div>
        06.06.1900
      </div>
      <div
        className="age"
      >
        50 v
      </div>
    </div>
    <div
      className="line last"
    >
      <div />
    </div>
    <div
      className="timelineText"
    >
      <div>
        Missing translationId: events.Residence for language: \${ languageCode }
         
      </div>
      <div
        className="place"
      >
        Place
      </div>
    </div>
  </div>
</div>
`;
